# poc-v2

./: .dockerignore  .env.txt  .gitignore  CV.tex  Dataexploration.ipynb  Dockerfile  Dockerfile.odoo  Structure du dossier.ini  Tuto OpenG2P.odt  directory_structure.txt  docker comp.txt  docker-compose.full.yml  docker-compose.yml  file_list.txt  generate_and_inject.py  individuals_50_sample.csv  notes.txt  odoo.conf  openg2p_tables.txt  rebuild.bat  res_partner.txt  rule_engine_test_dataset.csv  seed_openg2p_data.py  setup_project.ps1  setup_project.sh  stage pfe.jfif  start.bat  stop.bat  structure.txt  train_openg2p.py
openg2p-g2p-bridge/openg2p-g2p-bridge-celery-workers/: .env.example  README.md  celerybeat-schedule  pyproject.toml
openg2p-g2p-bridge/openg2p-g2p-bridge-celery-workers/tests/: test_block_funds_with_bank.py  test_check_funds_with_bank_task.py  test_disburse_funds_from_bank.py  test_mapper_resolution_task.py  test_mt940_processor.py
openg2p-registry/: .gitignore  README.md  pyproject.toml  requirements.txt  test-pre-requirements.txt
openg2p-registry/.github/workflows/: pre-commit.yml  test.yml
openg2p-registry/g2p_agent_portal_base/: __manifest__.py
openg2p-registry/g2p_agent_portal_base/controllers/: main.py
openg2p-registry/g2p_agent_portal_base/tests/: test_main.py
openg2p-registry/g2p_agent_portal_base/views/: menu_view.xml  profile.xml
openg2p-registry/g2p_auth_oidc_encryption/: README.md  __manifest__.py
openg2p-registry/g2p_auth_oidc_encryption/i18n/: g2p_auth_oidc_encryption.pot
openg2p-registry/g2p_auth_oidc_encryption/models/: auth_oauth_provider.py
openg2p-registry/g2p_auth_oidc_encryption/views/: auth_oauth_provider.xml
openg2p-registry/g2p_bank/: __manifest__.py
openg2p-registry/g2p_bank/tests/: __init__.py
openg2p-registry/g2p_change_management/: README.md  __manifest__.py
openg2p-registry/g2p_change_management/i18n/: g2p_change_management.pot
openg2p-registry/g2p_change_management/models/: __init__.py  change_log.py  change_request.py  change_request_reason.py  draft_record.py  res_partner.py  store_file.py
openg2p-registry/g2p_change_management/security/: ir.model.access.csv  ir.rules.xml
openg2p-registry/g2p_change_management/views/: change_log_views.xml  change_request_reason_views.xml  change_request_views.xml  draft_record_views.xml  partner_views.xml
openg2p-registry/g2p_change_management/wizards/: __init__.py  bulk_operations_wizard.py  bulk_operations_wizard_views.xml  change_request_reject.py  change_request_wizard.xml
openg2p-registry/g2p_document_encryption/: README.md  __manifest__.py
openg2p-registry/g2p_document_encryption/i18n/: g2p_document_encryption.pot
openg2p-registry/g2p_document_encryption/models/: document_file.py  document_store.py
openg2p-registry/g2p_document_encryption/tests/: __init__.py  test_document_file.py  test_document_store.py
openg2p-registry/g2p_document_encryption/views/: document_store.xml
openg2p-registry/g2p_document_field/: README.md  __init__.py  __manifest__.py  binary_field.py  image_field.py
openg2p-registry/g2p_document_field/i18n/: g2p_document_field.pot
openg2p-registry/g2p_encryption/i18n/: g2p_encryption.pot
openg2p-registry/g2p_encryption/models/: encryption_provider.py
openg2p-registry/g2p_encryption/security/: groups.xml
openg2p-registry/g2p_enumerator/: __manifest__.py
openg2p-registry/g2p_enumerator/views/: group_view.xml  (+1 more)
openg2p-registry/g2p_leaflet_map/: README.md  __manifest__.py
openg2p-registry/g2p_odk_importer/: __manifest__.py
openg2p-registry/g2p_odk_importer_documents/: __manifest__.py
openg2p-registry/g2p_odk_user_mapping/: __manifest__.py
openg2p-registry/g2p_profile_image/: __manifest__.py
openg2p-registry/g2p_registration_portal_base/: __manifest__.py
openg2p-registry/g2p_registry/: README.md  __manifest__.py
openg2p-registry/g2p_registry_base/: __init__.py  __manifest__.py
openg2p-registry/g2p_registry_dashboard/: README.md  __init__.py  __manifest__.py
openg2p-registry/g2p_registry_datashare_rabbitmq/: README.md  __manifest__.py  json_encoder.py
openg2p-registry/g2p_registry_datashare_websub/: __manifest__.py
openg2p-registry/g2p_registry_deduplication_deduplicator/: __manifest__.py
openg2p-registry/g2p_registry_document_encryption/: __manifest__.py
openg2p-registry/g2p_registry_document_encryption_group/: README.md  __manifest__.py
openg2p-registry/g2p_registry_document_encryption_individual/: README.md  __manifest__.py
openg2p-registry/g2p_registry_documents/: __manifest__.py
openg2p-registry/g2p_registry_documents_group/: README.md  __manifest__.py
openg2p-registry/g2p_registry_documents_individual/: README.md  __manifest__.py
openg2p-registry/g2p_registry_g2p_connect_rest_api/: __manifest__.py
openg2p-registry/g2p_registry_group/: __manifest__.py
openg2p-registry/g2p_registry_id_deduplication/: __init__.py  __manifest__.py
openg2p-registry/g2p_registry_individual/: __manifest__.py
openg2p-registry/g2p_registry_membership/: __manifest__.py
openg2p-registry/g2p_registry_proxy_means_test/: README.md  __manifest__.py
openg2p-registry/g2p_registry_theme/: README.md  __manifest__.py
openg2p-registry/g2p_social_registry_model/: README.md  __init__.py  __manifest__.py
openg2p-registry/g2p_superset_dashboard/: __manifest__.py
openg2p-registry/g2p_user_security/: README.md  __manifest__.py
(+484 files in other folders)
