[project]
name = "odoo-addons-openg2p-registry"
version = "0.0.0"
dependencies = [
    "odoo-addon-g2p_agent_portal_base @ {root:uri}/g2p_agent_portal_base",
    "odoo-addon-g2p_auth_id_oidc @ {root:uri}/g2p_auth_id_oidc",
    "odoo-addon-g2p_auth_oidc_encryption @ {root:uri}/g2p_auth_oidc_encryption",
    "odoo-addon-g2p_bank @ {root:uri}/g2p_bank",
    "odoo-addon-g2p_bank_rest_api @ {root:uri}/g2p_bank_rest_api",
    "odoo-addon-g2p_document_encryption @ {root:uri}/g2p_document_encryption",
    "odoo-addon-g2p_document_field @ {root:uri}/g2p_document_field",
    "odoo-addon-g2p_draft_publish @ {root:uri}/g2p_draft_publish",
    "odoo-addon-g2p_encryption @ {root:uri}/g2p_encryption",
    "odoo-addon-g2p_encryption_keymanager @ {root:uri}/g2p_encryption_keymanager",
    "odoo-addon-g2p_encryption_rest_api @ {root:uri}/g2p_encryption_rest_api",
    "odoo-addon-g2p_enumerator @ {root:uri}/g2p_enumerator",
    "odoo-addon-g2p_leaflet_map @ {root:uri}/g2p_leaflet_map",
    "odoo-addon-g2p_odk_importer @ {root:uri}/g2p_odk_importer",
    "odoo-addon-g2p_odk_importer_documents @ {root:uri}/g2p_odk_importer_documents",
    "odoo-addon-g2p_odk_user_mapping @ {root:uri}/g2p_odk_user_mapping",
    "odoo-addon-g2p_openid_vci @ {root:uri}/g2p_openid_vci",
    "odoo-addon-g2p_openid_vci_group @ {root:uri}/g2p_openid_vci_group",
    "odoo-addon-g2p_openid_vci_rest_api @ {root:uri}/g2p_openid_vci_rest_api",
    "odoo-addon-g2p_portal_auth @ {root:uri}/g2p_portal_auth",
    "odoo-addon-g2p_profile_image @ {root:uri}/g2p_profile_image",
    "odoo-addon-g2p_registration_portal_base @ {root:uri}/g2p_registration_portal_base",
    "odoo-addon-g2p_registry @ {root:uri}/g2p_registry",
    "odoo-addon-g2p_registry_addl_info @ {root:uri}/g2p_registry_addl_info",
    "odoo-addon-g2p_registry_addl_info_rest_api @ {root:uri}/g2p_registry_addl_info_rest_api",
    "odoo-addon-g2p_registry_base @ {root:uri}/g2p_registry_base",
    "odoo-addon-g2p_registry_dashboard @ {root:uri}/g2p_registry_dashboard",
    "odoo-addon-g2p_registry_datashare_rabbitmq @ {root:uri}/g2p_registry_datashare_rabbitmq",
    "odoo-addon-g2p_registry_datashare_websub @ {root:uri}/g2p_registry_datashare_websub",
    "odoo-addon-g2p_registry_deduplication_deduplicator @ {root:uri}/g2p_registry_deduplication_deduplicator",
    "odoo-addon-g2p_registry_document_encryption @ {root:uri}/g2p_registry_document_encryption",
    "odoo-addon-g2p_registry_document_encryption_group @ {root:uri}/g2p_registry_document_encryption_group",
    "odoo-addon-g2p_registry_document_encryption_individual @ {root:uri}/g2p_registry_document_encryption_individual",
    "odoo-addon-g2p_registry_documents @ {root:uri}/g2p_registry_documents",
    "odoo-addon-g2p_registry_documents_group @ {root:uri}/g2p_registry_documents_group",
    "odoo-addon-g2p_registry_documents_individual @ {root:uri}/g2p_registry_documents_individual",
    "odoo-addon-g2p_registry_encryption @ {root:uri}/g2p_registry_encryption",
    "odoo-addon-g2p_registry_g2p_connect_rest_api @ {root:uri}/g2p_registry_g2p_connect_rest_api",
    "odoo-addon-g2p_registry_group @ {root:uri}/g2p_registry_group",
    "odoo-addon-g2p_registry_id_deduplication @ {root:uri}/g2p_registry_id_deduplication",
    "odoo-addon-g2p_registry_individual @ {root:uri}/g2p_registry_individual",
    "odoo-addon-g2p_registry_membership @ {root:uri}/g2p_registry_membership",
    "odoo-addon-g2p_registry_proxy_means_test @ {root:uri}/g2p_registry_proxy_means_test",
    "odoo-addon-g2p_registry_rest_api @ {root:uri}/g2p_registry_rest_api",
    "odoo-addon-g2p_registry_theme @ {root:uri}/g2p_registry_theme",
    "odoo-addon-g2p_social_registry_model @ {root:uri}/g2p_social_registry_model",
    "odoo-addon-g2p_superset_dashboard @ {root:uri}/g2p_superset_dashboard",
    "odoo-addon-g2p_user_security @ {root:uri}/g2p_user_security",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
bypass-selection = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
